--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@remotion/eslint-config-flat": "4.0.429",
     "@types/react": "19.2.7",
     "@types/web": "0.0.166",
-    "eslint": "9.19.0",
+    "eslint": "^9.39.3",
     "prettier": "3.8.1",
     "typescript": "5.9.3"
   },
